--- a/views/layout.twig
+++ b/views/layout.twig
@@ -5,10 +5,10 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Pandanite (PDN) Blockchain Explorer" />
+		<meta name="description" content="MakerCoin Blockchain Explorer" />
 		<link rel="manifest" href="/manifest.json" />
 
-		<title>Pandanite (PDN) Blockchain Explorer</title>
+		<title>MakerCoin Blockchain Explorer</title>
 
 		<link rel="stylesheet" href="/stylesheets/chartist.min.css">
 		
@@ -31,7 +31,7 @@
 				<div class="sc-AxirZ krtsgc">
 					<div class="sc-AxiKw bOTXee" style="padding-top: 3px;">
 						<a href="/" class="sc-AxheI gCChFq">
-							<img src="/images/pdnlogoicon.webp" class="sc-AxhCb XjdiQ" /> PANDASCAN
+							<img src="/images/pdnlogoicon.webp" class="sc-AxhCb XjdiQ" /> MAKERSCAN
 						</a>
 					</div>
 					<div class="sc-AxhUy bPBxXj">
@@ -49,14 +49,14 @@
 			<div class="sc-Axmtr bIqxoK">
 				<div class="sc-AxmLO juhQJX">
 					<div class="sc-fzozJi ga-DFuP">
-						<div class="sc-fzpans cOvRme"><img src="/images/pdnlogoicon.webp" class="sc-fzoLsD cOIACS" />Powered by Pandanite</div>
+						<div class="sc-fzpans cOvRme"><img src="/images/pdnlogoicon.webp" class="sc-fzoLsD cOIACS" />Powered by MakerCoin</div>
 						<div class="sc-fzplWN wgAjp">
-							Pandascan is a Block Explorer and Analytics Platform<br />
-							for Pandanite, a fast layer 1 protocol built with only 6000 lines of code.
+							MakerScan is a Block Explorer and Analytics Platform<br />
+							for MakerCoin, a fast layer 1 protocol built with only 6000 lines of code.
 						</div>
 					</div>
 					<hr class="sc-fznKkj hLcedR" />
-					<div class="sc-fznZeY gRLfCv" style="color:#fff;">Made with &nbsp;<i class="fa-solid fa-heart" style="color: red;"></i>&nbsp; by&nbsp;<a style="color: #fff;" href="https://xeggex.com">XeggeX</a><div class="sc-fzokOt fKudky">Pandascan © 2023</div></div>
+					<div class="sc-fznZeY gRLfCv" style="color:#fff;">Made with &nbsp;<i class="fa-solid fa-heart" style="color: red;"></i>&nbsp; by&nbsp;<a style="color: #fff;" href="https://xeggex.com">XeggeX</a><div class="sc-fzokOt fKudky">MakerScan © 2023</div></div>
 				</div>
 			</div>
 		</div>
