--- a/views/layout.twig
+++ b/views/layout.twig
@@ -56,7 +56,7 @@
 						</div>
 					</div>
 					<hr class="sc-fznKkj hLcedR" />
-					<div class="sc-fznZeY gRLfCv" style="color:#fff;">Made with &nbsp;<i class="fa-solid fa-heart" style="color: red;"></i>&nbsp; by&nbsp;<a style="color: #fff;" href="https://xeggex.com">XeggeX</a><div class="sc-fzokOt fKudky">MakerScan © 2023</div></div>
+					<div class="sc-fznZeY gRLfCv" style="color:#fff;">Pandanite fork, Made with &nbsp;<i class="fa-solid fa-heart" style="color: red;"></i>&nbsp; by&nbsp;<a style="color: #fff;" href="https://xeggex.com">XeggeX</a><div class="sc-fzokOt fKudky">MakerScan © 2023</div></div>
 				</div>
 			</div>
 		</div>
