--- a/views/blocks.twig
+++ b/views/blocks.twig
@@ -109,7 +109,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Total Value PDN",
+		  name: "Total Value Coin",
 		  attributes: {
 			style: {
 				width: '150px',
@@ -118,7 +118,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Total Fees PDN",
+		  name: "Total Fees Coin",
 		  attributes: {
 			style: {
 				width: '150px',
