--- a/views/index.twig
+++ b/views/index.twig
@@ -22,7 +22,7 @@
 								<div class="sc-pITNg dCzMlQ">
 									<img src="/images/pandablue2.png" class="sc-pkIrX hqGwVX" />
 									<div class="sc-pQsrT cXYqGV">
-										<div class="sc-pYNsO hYOBBy"><div class="sc-oUOMp dmVAYk">PDN PRICE</div></div>
+										<div class="sc-pYNsO hYOBBy"><div class="sc-oUOMp dmVAYk">Coin PRICE</div></div>
 										<div class="sc-pYNsO hYOBBy"><div class="sc-pdjNk gyAAVC">$<span id="pdnpriceusd">---</span> @ <span id="pdnpricebtc">---</span> BTC (<span id="pdnpricechange">---</span>)</div></div>
 									</div>
 								</div>
@@ -208,7 +208,7 @@ $(document).ready(function() {
 				</div>
 			
 				<div style="width: 120px;display: flex;">
-					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + blockData.totalValue + ` PDN</div>
+					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + blockData.totalValue + ` Coin</div>
 				</div>
 			
 			  </div>
@@ -272,7 +272,7 @@ $(document).ready(function() {
 				</div>
 
 				<div style="width:120px;display: flex;">
-					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + txInfo.amount + ` PDN</div>
+					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + txInfo.amount + ` Coin</div>
 				</div>
 			
 			  </div>
@@ -360,7 +360,7 @@ $(document).ready(function() {
 				</div>
 			
 				<div style="width: 120px;display: flex;">
-					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + blockData.totalValue + ` PDN</div>
+					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + blockData.totalValue + ` Coin</div>
 				</div>
 			
 			  </div>
@@ -411,7 +411,7 @@ $(document).ready(function() {
 				</div>
 
 				<div style="width:120px;display: flex;">
-					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + txInfo.amount + ` PDN</div>
+					<div style="margin-left: auto;margin-right: 0px;overflow: hidden;text-overflow: ellipsis;background-color: #f1f2f4;display: inline-block;border-radius: 6.1875rem;font-size: 0.60938rem;line-height: 1.7;letter-spacing: 0.8px;padding: 0 0.5rem;"> ` + txInfo.amount + ` Coin</div>
 				</div>
 			
 			  </div>
