--- a/views/richlist.twig
+++ b/views/richlist.twig
@@ -80,7 +80,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Balance PDN",
+		  name: "Balance Coin",
 		  attributes: {
 			style: {
 				'text-align': "right",
