--- a/views/account.twig
+++ b/views/account.twig
@@ -25,7 +25,7 @@
 
 				<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
 					<div style="flex:1; padding:15px;">Balance:</div>
-					<div style="flex:3; padding:15px;" >{{ accountInfo.balanceFormatted }} PDN</div>
+					<div style="flex:3; padding:15px;" >{{ accountInfo.balanceFormatted }} Coin</div>
 				</div>
 
 				<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
@@ -200,7 +200,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Value PDN",
+		  name: "Value Coin",
 		  attributes: {
 			style: {
 				width: '130px',
@@ -209,7 +209,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Fee PDN",
+		  name: "Fee Coin",
 		  attributes: {
 			style: {
 				width: '120px',
