--- a/views/block.twig
+++ b/views/block.twig
@@ -61,7 +61,7 @@
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
 				<div style="flex:1; padding:15px;">Block Reward:</div>
-				<div style="flex:3; padding:15px;">{{ blockInfo.blockRewardFormatted }} PDN {% if (blockInfo.totalFees>0) %} (+{{ blockInfo.totalFeesFormatted }} PDN Fees) {% endif %}</div>
+				<div style="flex:3; padding:15px;">{{ blockInfo.blockRewardFormatted }} Coin {% if (blockInfo.totalFees>0) %} (+{{ blockInfo.totalFeesFormatted }} Coin Fees) {% endif %}</div>
 			</div>
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
@@ -71,12 +71,12 @@
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
 				<div style="flex:1; padding:15px;">Total Value:</div>
-				<div style="flex:3; padding:15px;">{{ blockInfo.totalValueFormatted }} PDN</div>
+				<div style="flex:3; padding:15px;">{{ blockInfo.totalValueFormatted }} Coin</div>
 			</div>
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
 				<div style="flex:1; padding:15px;">Total Fees:</div>
-				<div style="flex:3; padding:15px;">{{ blockInfo.totalFeesFormatted }} PDN</div>
+				<div style="flex:3; padding:15px;">{{ blockInfo.totalFeesFormatted }} Coin</div>
 			</div>
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
