--- a/views/tx.twig
+++ b/views/tx.twig
@@ -62,12 +62,12 @@
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
 				<div style="flex:1; padding:15px;">Value:</div>
-				<div style="flex:3; padding:15px;">{{ txInfo.valueFormatted }} PDN</div>
+				<div style="flex:3; padding:15px;">{{ txInfo.valueFormatted }} Coin</div>
 			</div>
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
 				<div style="flex:1; padding:15px;">Transaction Fee:</div>
-				<div style="flex:3; padding:15px;">{{ txInfo.feeFormatted }} PDN</div>
+				<div style="flex:3; padding:15px;">{{ txInfo.feeFormatted }} Coin</div>
 			</div>
 
           	<div style="border-bottom: 0.5px solid #e7eaf3; display:flex; flex-direction:row;">
