--- a/views/txs.twig
+++ b/views/txs.twig
@@ -134,7 +134,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Value PDN",
+		  name: "Value Coin",
 		  attributes: {
 			style: {
 				width: '130px',
@@ -143,7 +143,7 @@ $(document).ready(function() {
 		  }
 		},
 		{ 
-		  name: "Fee PDN",
+		  name: "Fee Coin",
 		  attributes: {
 			style: {
 				width: '120px',
